--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,7 @@ header{
     background-image: url("../assets/icons/perfil.svg");
 }
 main {
+
     width: 100%;
     min-width: 320px;
     max-width: 1024px;
@@ -210,7 +211,7 @@ main {
     position: relative;
     cursor: pointer;
     display: block;
-}
+    }
 .post-image img{
     width: 100%;
     vertical-align: top;
@@ -237,4 +238,26 @@ main {
     margin: 5px;
     font-weight: bold;
     text-align: center;
+}
+footer {
+    margin-top: 20px;
+    width: 100%;
+    height: auto;
+}
+.list-container-footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+.list-container-footer li {
+    padding: 10px;
+    align-self: center;
+}
+.list-container-footer a {
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1.4rem;
+    color: rgba(142, 142, 142, .9);
 }
