--- a/css/style.css
+++ b/css/style.css
@@ -206,14 +206,22 @@ main {
     grid-template-columns: repeat(3,  minmax(100px , 293px));
     justify-content: center;
     gap: 3px;
+    grid-auto-flow: 200px;
 }
 .post {
     position: relative;
     cursor: pointer;
     display: block;
+    overflow: hidden;
     }
+.post-image{     
+        height: 100%;
+       
+    } 
 .post-image img{
     width: 100%;
+    height: 100%;
+    object-fit: cover;
     vertical-align: top;
 }
 .post-overlay{
